# lua-tinyfiledialogs

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml
cmake/: FindLuaJIT.cmake
example/: example.lua
src/: CMakeLists.txt  config.h  main.cpp  tinyfiledialogs.c
